corrections visible

--- a/src/app/features/pages/home/home.page.scss
+++ b/src/app/features/pages/home/home.page.scss
@@ -2,6 +2,11 @@
   --color: #9c9c9c !important;
 }
 
+
+.card-content-md p{
+  font-size: 50px !important;
+}
+
 ion-toolbar {
   --background: #ffffff;
   --opacity: 100;
@@ -19,6 +24,25 @@ ion-toolbar {
 ion-content {
   //--background: #ffffff;
   color: #fff;
+
+  ion-card {
+    .card-content {
+      margin-left: 0;
+      margin-right: 0;
+      margin-top: 0;
+      margin-bottom: 2px;
+      font-size: 14px;
+      font-weight: normal;
+      text-align: justify;
+      text-justify: inter-word;
+      line-height: 1.5;
+    }
+
+    b {
+      text-align: left;
+      //text-justify: inter-word;
+    }
+  }
 
   h1 {
     text-align: center;
@@ -39,7 +63,6 @@ ion-content {
   }
 
   p {
-      font-size: 20px;
       text-align: justify;
       color: #9c9c9c;
       padding: 20px;
